--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,6 +34,7 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "../backend/src/main/resources/static",
               "budgets": [
                 {
                   "type": "initial",
